--- a/lianpeng/templates/_user_menu.html
+++ b/lianpeng/templates/_user_menu.html
@@ -34,6 +34,7 @@
                 <li><a href="/admin/" target="_blank"><i class="icon-wrench"></i> {% trans "Admin" %}</a></li>
                 {% endif %}
                 <li><a href="{% url help %}" data-toggle="modal"><i class="icon-question-sign"></i> {% trans "Help" %}</a></li>
+                <li><a target="_blank" href="#feedback" data-toggle="modal"><i class="icon-comment"></i> {% trans "Feedback" %}</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url account_logout %}"><i class="icon-off"></i> {% trans "Log out" %}</a></li>
             </ul>
