--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -119,14 +119,25 @@ a {
                 margin:16px 0;
                 input {
                     border: none;
+                    background:#f7f7f7;
                 }
                 .btn {
                     border: none;
-                    background: none;
+                    background: #BDC2CA;
+                    i {
+                        color: white;
+                    }
                 }
             }
             .avatar-nav {
                 padding:14px 16px 14px 16px;
+            }
+            .nav {
+                a.btn {
+                    border: none;
+                    background: #e33244;
+                    margin: 16px 0 0 15px;
+                }
             }
         }
         &.navbar .nav>li>a {
