--- a/bookmark/templates/bookmark/list_detail.html
+++ b/bookmark/templates/bookmark/list_detail.html
@@ -81,6 +81,7 @@
 {% block extra_script %}
 <script type="text/javascript" charset="utf-8">
     var USER_ID = {% if user.id %}{{ user.id }}{% else %}null{% endif %};
+    var USER_URL = "/api/v1/user/" + USER_ID;
     var USER_NAME  = "{{user.username}}";
 </script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/underscore-min.js" charset="utf-8"></script>
